...
  return (
    <View style={styles.container}>
      <Background showRed={false} />
      <Container style={styles.content}>
        <View style={styles.detailsContainer}>
          <ThemedText style={styles.title} type="title" size="large">
            Profile
          </ThemedText>
          <View style={styles.card}>
            <ThemedText size="small" style={styles.label}>
              Email
            </ThemedText>
            <ThemedText type="defaultBold">{user.email}</ThemedText>
...
          <Button
            onPress={handleLogout}
            isLoading={isLoggingOut}
            style={styles.logoutButton}
            textStyle={styles.logoutButtonText}
          >
            Logout
          </Button>

          <View style={styles.dangerZone}>
            <Button
              onPress={() => setIsDeleteModalOpen(true)}
              style={styles.deleteButton}
...
