...
        contentContainerStyle={styles.scrollContent}
        keyboardShouldPersistTaps="handled"
      >
        <Background />
        <View style={styles.formContainer}>
          <ThemedText style={styles.title} type="title">
            Login!
          </ThemedText>

          {errorMessage && <AlertError>{errorMessage}</AlertError>}

          <Controller
            control={control}
...
