appId: com.barryph.kadence
env:
  TEST_EMAIL: ${TEST_EMAIL || "test@kadence.dev"}
  TEST_PASSWORD: ${TEST_PASSWORD || "testpassword123"}
---
- launchApp
- runFlow:
    when:
      visible: "Login!"
    file: subflows/login.yaml
- assertVisible: "Activities In Motion"
- tapOn:
    point: "90%,8%"
- assertVisible: "Profile"
- tapOn: "Logout"
- assertVisible: "Login!"
